Version 1.7.7+svn:
 * Language and i18n:
   * Updated translations:

Version 1.7.7:
 * AI:
   * Filtering of allowed attackers/defenders in 'attacks' aspect.
   * Fix a serious enough bug in default ai targeting. The bug caused the AI,
     in certain situations, to make weird shuffle-doing-nothing moves and not
     seek enemies or their villages
   * Optimize AI targeting phase.
 * Language and i18n:
   * New translations: Shavian
   * Updated translations: Czech, Dutch, Finnish, Estonian, German, Hungarian,
     Italian, Lithuanian, Russian, Serbian, Slovak, Spanish.
   * Fix a broken markup in the Italian translation (bug #14506)
 * Multiplayer:
   * Updated map: The Manzivan Traps
 * Units:
   * Removed Elder Wose and Shock Trooper from random_leader of the default era.
   * Removed Ancient Wose and Iron Mauler from random_leader of the AoH era.
   * New animation WML and macros for the Drakes
   * Increased the XP required to advance for the Orcish Assassin from 30 to 34.
   * Changed the cold resistance of the naga line from -20% to 0%.
 * User interface:
   * Enabled the new event handler by default now
   * Allow markup in a campaign description (bug #14435)
   * Escape no longer closes the new title screen
   * In recall dialog, use different color and brightness for XP and level
   * In unit list, display invisibility status and change order of columns
   * Update the mouse position after closing a dialog, so the dialog below
     'knows' the proper mouse location
   * Fix double click events to be send to the wrong window
   * Fix scrollbars to show up when not needed (bug #13996)
   * Avoid truncating the last line in campaign description (bug #14328)
 * WML engine:
   * Added 'side Y turn' and 'side Y turn X' events
   * Make status "hidden=yes" default, no need to do it manually in WML anymore
 * Miscellaneous and bugfixes:
   * Add-ons download list now takes filtering into account for
     displaying descriptions
   * Various code cleanups