@@ -1,6 +1,8 @@
 Version 1.7.7+svn:
  * Language and i18n:
    * Updated translations:
+ * User interface:
+   * Instead of "crashing" upon invalid markup try to show the raw text
 
 Version 1.7.7:
  * AI:
